--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body {
     background-color: #f0f2f5; /* Example background color */
     font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
 .form-container {
